Added parcel bundler and .gitignore

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/miriamhaenle/2021-w1-quiz-app/issues"
   },
-  "homepage": "https://github.com/miriamhaenle/2021-w1-quiz-app#readme"
+  "homepage": "https://github.com/miriamhaenle/2021-w1-quiz-app#readme",
+  "dependencies": {
+    "parcel-bundler": "^1.12.4"
+  }
 }
