--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Quiz app for web 2021-21, neuefische bootcamp",
   "main": "index.js",
   "scripts": {
+    "start": "parcel src/*.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
